logs/eval_47797402.log
Evaluating model: baseline_local
Traceback (most recent call last):
  File "/global/homes/s/sferrett/.conda/envs/monsoon-kernels/lib/python3.9/runpy.py", line 188, in _run_module_as_main
    mod_name, mod_spec, code = _get_module_details(mod_name, _Error)
  File "/global/homes/s/sferrett/.conda/envs/monsoon-kernels/lib/python3.9/runpy.py", line 158, in _get_module_details
    code = loader.get_code(mod_name)
  File "<frozen importlib._bootstrap_external>", line 983, in get_code
  File "<frozen importlib._bootstrap_external>", line 913, in source_to_code
  File "<frozen importlib._bootstrap>", line 228, in _call_with_frames_removed
  File "/global/cfs/cdirs/m4334/sferrett/monsoon-kernels/scripts/models/evaluate.py", line 148
    if hasattr(model.intkernel, ="get_weights"):
                                ^
SyntaxError: invalid syntax
